--- a/Python Class.ipynb
+++ b/Python Class.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "유닛이 2개 생성되었습니다\n",
+      "유닛이 1개 생성되었습니다\n",
       "firebat : 5시 방향으로 적군을 공격 합니다. [공격력 16]\n",
       "firebat : 25 데미지를 입었습니다.\n",
       "firebat : 현재 체력은 25 입니다.\n"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,43 +258,64 @@
     "        \n",
     "    def __init__(self, name, hp, damage) :\n",
     "        Unit.__init__(self,name,hp)\n",
-    "        self.damage = damage"
+    "        self.damage = damage\n",
+    "        \n",
+    "    def attack(self,location) :\n",
+    "        print(\"{0} : {1} 방향으로 적군을 공격합니다. [공격력 {2}]\"\\\n",
+    "             .format(self.name, location, self.damage))\n",
+    "    \n",
+    "    def damaged(self, damage) :\n",
+    "        print(\"{0} : {1} 데미지를 입었습니다.\".format(self.name, damage))\n",
+    "        self.hp -= damage\n",
+    "        print(\"{0} : 현재 체력은 {1} 입니다.\".format(self.name, self.hp))\n",
+    "        if self.hp <= 0 :\n",
+    "            print(\"{0} : 유닛이 파괴되었습니다.\".format(self.name))\n",
+    "            \n",
+    "# 비행 기능에 대한 Class 선언\n",
+    "class Flyable :\n",
+    "    def __init__(self, flying_speed) :\n",
+    "        self.flying_speed = flying_speed\n",
+    "    \n",
+    "    def fly(self, name, location) :\n",
+    "         print(\"{0} : {1} 방향으로 날아갑니다합니다. [속도 {2}]\"\\\n",
+    "             .format(self.name, location, self.flying_speed))\n",
+    "\n",
+    "# 공중 공격 유닛 Class 선언 (Wraith 등...)\n",
+    "# 다중상속 시, 콤마(,)로 구분\n",
+    "class Flyable_AttackUnit(AttackUnit, Flyable) :\n",
+    "    def __init__(self, name, hp, damage, flying_speed) :\n",
+    "        AttackUnit.__init__(self, name, hp, damage)\n",
+    "        Flyable.__init__(self,flying_speed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valkyrie : 4시 방향으로 날아갑니다합니다. [속도 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 공중 공격 유닛인 Valkyrie 생성\n",
+    "valkyrie = Flyable_AttackUnit(\"Valkyrie\",200,6,5)\n",
+    "valkyrie.fly(valkyrie.name,\"4시\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "vulture = AttackUnit(\"vulture\",80,10,20)\n",
+    "battlecruiser = Flyable_AttackUnit(\"battlecruiser\",500,25,3)"
+   ]
   }
  ],
  "metadata": {
