--- a/Regular Expression.ipynb
+++ b/Regular Expression.ipynb
@@ -113,6 +113,49 @@
     "y = re.findall('^From ([^ ]+@[^ ]+)',lin)\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fad4d611",
+   "metadata": {},
+   "source": [
+    "#### 주민번호 추출하여 뒷자리를 *로 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9d28691f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    park : 930208-*******\n",
+      "    kim : 870205-*******\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"\"\"\n",
+    "    park : 930208-1083475\n",
+    "    kim : 870205-2038674\n",
+    "\"\"\"\n",
+    "\n",
+    "ps_no = re.compile(\"(\\d{6})[-]\\d{7}\")\n",
+    "print(ps_no.sub(\"\\g<1>-*******\" ,data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2762b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
